updated donor android files, updated Manifest, updated values folder

--- a/app/src/main/res/layout/activity_create_don_acc.xml
+++ b/app/src/main/res/layout/activity_create_don_acc.xml
@@ -7,28 +7,35 @@
     tools:context=".createDonAcc">
 
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="408dp"
-        android:layout_height="89dp"
-        android:layout_marginBottom="624dp"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="Enter Your Details"
-        android:textSize="20sp"
-        android:textStyle="bold|italic"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="Enter Your Details"
+            android:textSize="30sp"
+            android:textStyle="bold|italic"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
     <LinearLayout
-        android:layout_width="410dp"
-        android:layout_height="572dp"
+        android:id="@+id/linearLayout10"
+        android:layout_width="376dp"
+        android:layout_height="508dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5">
+        app:layout_constraintTop_toBottomOf="@+id/textView10">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -41,7 +48,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                android:id="@+id/firstname"
+                android:id="@+id/name"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -50,46 +57,13 @@
                 android:layout_marginRight="40dp"
                 android:layout_marginLeft="10dp"
                 android:textSize="15dp"
-                android:text="First Name" />
+                android:text="Name" />
 
                 <EditText
-                    android:id="@+id/firstnamet"
+                    android:id="@+id/namet"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:hint="" />
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <TextView
-                android:id="@+id/lastname"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="3dp"
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="10dp"
-                android:textSize="15dp"
-                android:text="Last Name"/>
-
-                <EditText
-                    android:id="@+id/lastnamet"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:hint="" />
+                    android:layout_marginTop="5dp" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -116,12 +90,17 @@
                     android:textSize="15dp"
                     android:text="Gender" />
 
+                <!--<Spinner
+                    android:id="@+id/gendert"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/gender_array" />-->
+
                 <EditText
                     android:id="@+id/gendert"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:hint="" />
+                    android:layout_marginTop="5dp" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -148,12 +127,17 @@
                     android:textSize="15dp"
                     android:text="Blood Type" />
 
+                <!--<Spinner
+                    android:id="@+id/bloodtypet"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/blood_type_array" />-->
+
                 <EditText
                     android:id="@+id/bloodtypet"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:hint="" />
+                    android:layout_marginTop="5dp" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -184,8 +168,7 @@
                     android:id="@+id/birthdayt"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:hint="" />
+                    android:layout_marginTop="5dp" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -216,8 +199,7 @@
                     android:id="@+id/aget"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:hint="" />
+                    android:layout_marginTop="5dp" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -233,7 +215,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/address"
+                    android:id="@+id/street_no"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -242,14 +224,106 @@
                     android:layout_marginRight="40dp"
                     android:layout_marginLeft="10dp"
                     android:textSize="15dp"
-                    android:text="Address"/>
+                    android:text="Street No"/>
 
                 <EditText
-                    android:id="@+id/addresst"
+                    android:id="@+id/street_not"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/street"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_marginTop="5dp"
-                    android:hint="" />
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="15dp"
+                    android:text="Street"/>
+
+                <EditText
+                    android:id="@+id/streett"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/city"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="15dp"
+                    android:text="City"/>
+
+                <EditText
+                    android:id="@+id/cityt"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/province"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="15dp"
+                    android:text="Province"/>
+
+                <EditText
+                    android:id="@+id/provincet"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -281,8 +355,38 @@
                     android:id="@+id/emailt"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/contact"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_marginTop="5dp"
-                    android:hint="" />
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="15dp"
+                    android:text="Contact"/>
+
+                <EditText
+                    android:id="@+id/contactt"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
